# time_compressed_algo

./: .gitignore  README.md  Uoptimize.py  dense_pepo.ipynb  draw_tn.ipynb  p_pepo.py  p_pepo_bp.ipynb  p_pepo_su.ipynb  p_pepo_su.py  plot_.ipynb  pyproject.toml  quf.py  register_.py  requirements.txt  sample_fitting.ipynb  trotter_analysis.ipynb  trotter_reduce_pepo.ipynb  trotter_reduce_pepo_su.ipynb  trotter_reduce_peps.ipynb  trotter_reduce_peps_su.ipynb
data/: README.md
notebooks/analysis/: prac.ipynb  trotter_analysis.ipynb
notebooks/mps/: mps_sim.ipynb  mps_sim_.ipynb
notebooks/pepo/: dense_pepo.ipynb  dmrg_pepo_su.ipynb  p_pepo.ipynb  p_pepo_bp.ipynb  p_pepo_su.ipynb  trotter_reduce_mpo.ipynb  trotter_reduce_pepo.ipynb  trotter_reduce_pepo_su.ipynb  trotter_reduce_peps.ipynb  trotter_reduce_peps_su.ipynb
notebooks/plotting/: draw_tn.ipynb  plot.ipynb  plot_.ipynb  plot_tn.ipynb
src/tcompress/: Uoptimize.py  gate_arb.py  (+1 more)
store/: loss_L12_d3  loss_L12_d4  loss_su_chi12_L12_d3  loss_su_chi12_L16_d4  loss_su_chi12_L64_d4  loss_su_chi16_L12_d3  loss_su_chi16_L12_d4  loss_su_chi2_L12_d3  loss_su_chi2_L12_d4  loss_su_chi4_L12_d4  loss_su_chi4_L16_d4  loss_su_chi6_L12_d3  loss_su_chi8_L12_d4  loss_su_chi8_L16_d4  loss_su_chi8_L64_d4  params_L12_d3  params_L12_d4  params_su_chi12_L12_d3  params_su_chi12_L16_d4  params_su_chi12_L64_d4  params_su_chi16_L12_d3  params_su_chi16_L12_d4  params_su_chi2_L12_d3  params_su_chi2_L12_d4  params_su_chi4_L12_d4  params_su_chi4_L16_d4  params_su_chi6_L12_d3  params_su_chi8_L12_d4  params_su_chi8_L16_d4  params_su_chi8_L64_d4
(+3 files in other folders)
