[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tcompress"
version = "0.0.0"
description = "Tensor-network experiments for PEPO/PEPS compression and time-evolution optimization."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
